Actiwatch extraction and upload data workflow
