# src/mescobrad_edge/swagger/swagger.yaml
@@ -430,6 +430,29 @@ paths:
         "405":
           description: "Invalid input"
       x-swagger-router-controller: "mescobrad_edge.controllers.plugins_controller"
+  /plugins/actiwatch_actigraphy_upload:
+    post:
+      tags:
+      - "Plugins"
+      summary: "Upload actiwatch (Philips) actigraphy data"
+      description: "This API allows to upload actigraphy data from actiwatch Philips data."
+      operationId: "upload_actiwatch_actigraphy_data"
+      consumes:
+      - "multipart/form-data"
+      parameters:
+      - name: "upload_actigraphy_file"
+        in: "formData"
+        type: "file"
+        description: "The actiwatch actigraphy file to upload"
+        required: true
+      security:
+      - api_key: []
+      responses:
+        "202":
+          description: "Successful accepted"
+        "405":
+          description: "Invalid input"
+      x-swagger-router-controller: "mescobrad_edge.controllers.plugins_controller"
 securityDefinitions:
   api_key:
     type: "apiKey"
